<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >

    // El Linear layout  puede ser tanto vertical como horizontal y es la forma de como estaran organizados lo elementos dentro del view
   // El relative Layout no necesita orientacion


    <TextView
        android:text="@string/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsuario"
        android:textSize="20dp"
        android:textColor="#ff3344"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUsuario"
        android:hint="@string/hintNombre"
        />
    <TextView
        android:text="@string/Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtContraseña"
        android:textSize="20dp"
        android:textColor="#ff3344"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtContraseña"
        android:hint="@string/hintContraseña"
        android:inputType="number"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUno"
        android:text="@string/txtBtnUno"
       />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDos"
        android:text="@string/txtBtnDos"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTres"
        android:text="@string/txtBtnTres"
        />
<ImageView
    android:id="@+id/ImgUno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/usuario"
    android:scaleType="centerCrop"

    />
</LinearLayout>
